add translation repository and kafka adapter
